--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
                 </ul>
             </nav>
         </header>
-        <section>
+        <section style="margin-top: 195px;">
             <h2>留言</h2>
             <form class="contact-form" id="contact-form" onsubmit="submitForm(event)">
                 <label for="name">姓名:</label>
