--- a/gallery.html
+++ b/gallery.html
@@ -42,18 +42,24 @@
                 <h2>最新视频</h2>
                 <div id="media-list-videos" class="media-row">
                     <div class="media-item" data-date="2024-02-16" data-title="牛">
-                        <p><span>3.</span> <strong class="media-title">牛</strong></p>
-                        <a href="https://www.pexels.com/zh-cn/video/15921892/" target="_blank">
-                            <img src="images/牛.png" alt="牛">
-                        </a>
+                        <p><span>1.</span> <strong class="media-title">小车</strong></p>
+                        <p><video style="width: 30vw;height: 60vh;" src="images/b5232331c04bc1dc860e4d0a05f0810e.mp4" controls></video></p>
                         <p class="media-caption">2024-02-16</p>
                     </div>
                     <div class="media-item" data-date="2024-05-12" data-title="食物">
-                        <p><span>4.</span> <strong class="media-title">食物</strong></p>
-                        <a href="https://www.pexels.com/zh-cn/video/6060027/" target="_blank">
-                            <img src="images/食物.png" alt="食物">
-                        </a>
+                        <p><span>2.</span> <strong class="media-title">海边</strong></p>
+                        <p><video style="width: 30vw;height: 60vh;" src="images/ace5ade3abf57182b2306e5bbd8687e7.mp4" controls></video></p>
                         <p class="media-caption">2024-05-12</p>
+                    </div>
+                    <div class="media-item" data-date="2024-02-16" data-title="牛">
+                        <p><span>3.</span> <strong class="media-title">牛</strong></p>
+                        <p><video style="width: 30vw;height: 60vh;" src="images/15921892-uhd_3840_2160_50fps.mp4" controls></video></p>
+                        <p class="media-caption">2024-02-16</p>
+                    </div>
+                    <div class="media-item" data-date="2024-02-16" data-title="食物">
+                        <p><span>4.</span> <strong class="media-title">食物</strong></p>
+                        <p><video style="width: 30vw;height: 60vh;" src="images/6060027-uhd_2160_3840_25fps.mp4" controls></video></p>
+                        <p class="media-caption">2024-02-16</p>
                     </div>
                 </div>
             </div>
