--- a/index.html
+++ b/index.html
@@ -62,21 +62,14 @@
                 </div>
             </div>
             <h2>最新文章</h2>
-			<p>引用了网上的文章QAQ</p>
             <div id="latest-articles">
-                <div class="article-cover" data-date="2024-05-20" data-title="python自动化有多神奇？">
-                    <p><span>1.</span> <strong class="article-title">python自动化有多神奇？</strong></p>
-                    <a href="https://www.zhihu.com/question/447051874/answer/3508098309" target="_blank">
-                        <img src="images/文章1封面.png" alt="文章1封面">
-                    </a>
-                    <p>2024.5.20</p>
+                <div class="article-cover" data-date="2024-05-20" data-title="光纤传感器">
+                    <p><span>文章1.</span> <strong class="article-title"><a href="articles.html">光纤传感器</a></strong></p>
+                    <p>2024.5.15</p>
                 </div>
-                <div class="article-cover" data-date="2024-05-25" data-title="我与数模">
-                    <p><span>2.</span> <strong class="article-title">我与数模</strong></p>
-                    <a href="https://zhuanlan.zhihu.com/p/681992309" target="_blank">
-                        <img src="images/文章2封面.png" alt="文章2封面">
-                    </a>
-                    <p>2024.5.25</p>
+                <div class="article-cover" data-date="2024-05-25" data-title="智能传感器">
+                    <p><span>文章2.</span> <strong class="article-title"><a href="article1.html">智能传感器</a></strong></p>
+                    <p>2024.5.20</p>
                 </div>
             </div>
             <h2>最新图片</h2>
@@ -93,22 +86,27 @@
                 </div>
             </div>
             <h2>最新视频</h2>
-			<p>引用了网上的视频QAQ</p>
             <div id="latest-videos" class="media-row">
                 <div class="media-item" data-date="2024-02-16" data-title="牛">
-                    <p><span>3.</span> <strong class="media-title">牛</strong></p>
-                    <a href="https://www.pexels.com/zh-cn/video/15921892/" target="_blank">
-                        <img src="images/牛.png" alt="牛">
-                    </a>
+                    <p><span>1.</span> <strong class="media-title">小车</strong></p>
+                    <p><video style="width: 30vw;height: 60vh;" src="images/b5232331c04bc1dc860e4d0a05f0810e.mp4" controls></video></p>
                     <p class="media-caption">2024-02-16</p>
                 </div>
                 <div class="media-item" data-date="2024-05-12" data-title="食物">
-                    <p><span>4.</span> <strong class="media-title">食物</strong></p>
-                    <a href="https://www.pexels.com/zh-cn/video/6060027/" target="_blank">
-                        <img src="images/食物.png" alt="食物">
-                    </a>
+                    <p><span>2.</span> <strong class="media-title">海边</strong></p>
+                    <p><video style="width: 30vw;height: 60vh;" src="images/ace5ade3abf57182b2306e5bbd8687e7.mp4" controls></video></p>
                     <p class="media-caption">2024-05-12</p>
                 </div>
+				<div class="media-item" data-date="2024-02-16" data-title="牛">
+				    <p><span>3.</span> <strong class="media-title">牛</strong></p>
+				    <p><video style="width: 30vw;height: 60vh;" src="images/15921892-uhd_3840_2160_50fps.mp4" controls></video></p>
+				    <p class="media-caption">2024-02-16</p>
+				</div>
+				<div class="media-item" data-date="2024-02-16" data-title="食物">
+				    <p><span>4.</span> <strong class="media-title">食物</strong></p>
+				    <p><video style="width: 30vw;height: 60vh;" src="images/6060027-uhd_2160_3840_25fps.mp4" controls></video></p>
+				    <p class="media-caption">2024-02-16</p>
+				</div>
             </div>
         </section>
         <footer>
